# bct_1

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
bct_1/dataset/: make_dataset.py
bct_1/features/: build_features.py
bct_1/models/: deep_api.py
bct_1/tests/: test_unit_model.py
bct_1/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-bct_1_start.ipynb
