# -*- coding: utf-8 -*-
[metadata]
name = bct_1
summary = None
description-file =
    README.md
author = tomas
author-email = t.alcanizcascales@um.es
version = 0.0.1
license = MIT
home-page = https://github.com/Tomas-alc/bct_1
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    bct_1

[entry_points]

deepaas.v2.model = 
    bct_1 = bct_1.models.deep_api

